Fix feedback pre wrapping.

--- a/app/assets/stylesheets/feedback-data.css.scss
+++ b/app/assets/stylesheets/feedback-data.css.scss
@@ -44,6 +44,11 @@ $row-fill-color: #FAFAFA;
           pre {
             font-family: inherit;
             font-size: inherit;
+            white-space: pre-wrap;       /* CSS 3 */
+            white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+            white-space: -pre-wrap;      /* Opera 4-6 */
+            white-space: -o-pre-wrap;    /* Opera 7 */
+            word-wrap: break-word;       /* Internet Explorer 5.5+ */
           }
         }
       }
